--- a/StickerWhatsAppBOT/config/config.json
+++ b/StickerWhatsAppBOT/config/config.json
@@ -1,6 +1,6 @@
 {
-    "name": "StickerBOT",
-    "author": "DrelezTM",
+    "name": "BOT",
+    "author": "ig: sigit.berkarya",
     "timezone": "Asia/Jakarta",
     "groups": true
 }
